Patient Portal Site Login Demo/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ecare__Create_Clinician__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked a Clinician record will also be populated.</description>
        <inlineHelpText>Check this box if you want the user to available as a Clinician for referrals and as a  patient physician. This will add the user&apos;s details to the External Clinicians.</inlineHelpText>
        <label>Create Clinician ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ecare__Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecare__Grade__c</fullName>
        <label>Grade</label>
        <picklist>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior clinical medical officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical medical officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seamless training grade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist registrar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior house officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation year 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation year 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (e.g. Trust Doctor, visiting registrar)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecare__Medical_Registration__c</fullName>
        <externalId>true</externalId>
        <label>Medical Registration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ecare__Prescription_Approvals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Clinician can approve prescriptions for controlled drugs</description>
        <label>Prescription Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ecare__Primary_Specialty__c</fullName>
        <label>Primary Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Accident &amp; Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adolescent Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaesthetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audiological Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiac Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiothoracic Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child and Adolescent Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical  Radiology (Diag. Radiology)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Dental Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Midwifery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ear, Nose &amp; Throat (ENT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrinology &amp; Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forensic Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Psychiatry (Mental Illness)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Surgery(ex Vascular,Maxillofac.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genito-Urinary Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geriatric Medicine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecare__Registration_Body__c</fullName>
        <description>The organisation the clinician is registered with, such as a Medical Council or Nursing Authority.</description>
        <label>Registration Body</label>
        <picklist>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPCSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMBSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ecare__Secondary_Specialty__c</fullName>
        <label>Secondary Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Accident &amp; Emergency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adolescent Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaesthetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audiological Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiac Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiothoracic Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child and Adolescent Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical  Radiology (Diag. Radiology)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Dental Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Midwifery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ear, Nose &amp; Throat (ENT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrinology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endocrinology &amp; Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forensic Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Psychiatry (Mental Illness)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Surgery(ex Vascular,Maxillofac.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genito-Urinary Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geriatric Medicine</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
</CustomObject>